# gedcom-parser

./: .env.example  CONTRIBUTING.md  DEVELOPMENT_SUMMARY.md  Dockerfile  EVENTS_API.md  FASTAPI_README.md  Familio_gedcom_2025-06-09_12-15-03.ged  GEDCOM_MCP_IMPROVEMENTS.md  GEMINI.md  LICENSE  PROJECT_SUMMARY.md  README.md  TECHNICAL_SPECIFICATION.md  TODO_FILE_MANAGEMENT.md  docker-compose.yml  openapi.yaml  pyproject.toml  requirements.txt  test_events_endpoint.py  test_signature_endpoints.py
.github/workflows/: request-deploy-f.yml
.qlty/: qlty.toml
prompts/: biography_summary.tmpl  family_tree_query.tmpl  relationship_finder.tmpl
src/gedcom_mcp/: __init__.py  app.py  celery_app.py  fastapi_server.py  fastmcp_server.py  gedcom_analysis.py  gedcom_data_access.py  gedcom_data_management.py  gedcom_date_utils.py  gedcom_models.py  gedcom_name_utils.py  gedcom_utils.py  get_timeline.py  signature_utils.py
src/gedcom_mcp/api/: __init__.py
src/gedcom_mcp/api/v1/: __init__.py  dependencies.py  router.py
src/gedcom_mcp/api/v1/endpoints/: __init__.py  cache.py  health.py  persons.py  timeline.py
src/gedcom_mcp/core/: __init__.py  config.py  security.py
src/gedcom_mcp/parser/: __init__.py  gedcom_analysis.py  gedcom_constants.py  gedcom_context.py  gedcom_data_access.py  gedcom_data_management.py  gedcom_models.py  gedcom_place_utils.py  gedcom_search.py
src/gedcom_mcp/schemas/: __init__.py  responses.py
src/gedcom_mcp/services/: __init__.py  file_cache.py  gedcom_service.py
tests/: napo.ged  sample.ged  test_batch_update.py  test_fastapi_server.py  test_fuzzy_search_internal.py  test_gedcom_analysis.py  test_gedcom_context.py  test_gedcom_data_access.py  test_gedcom_data_management.py  test_gedcom_date_utils.py  test_gedcom_edge_cases.py  test_gedcom_error.py  test_gedcom_models.py  test_gedcom_name_utils.py  test_gedcom_place_utils.py  test_gedcom_search.py  test_gedcom_search_royal.py  test_gedcom_utils.py
