[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gedcom-mcp"
version = "0.1.0"
description = "A FastMCP server for querying genealogical data from GEDCOM files"
readme = "README.md"
authors = [{name = "Airy André", email = "airy.andre@free.fr"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastmcp>=0.1.0",
    "python-gedcom>=0.1.0",
    "pydantic>=2.0.0",
    "cachetools>=4.0.0",
    "unidecode>=1.3.0",
    "nameparser>=1.1.3",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.scripts]
gedcom-mcp-server = "gedcom_mcp.fastmcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gedcom_mcp = ["prompts/*.tmpl"]
